@@ -80,17 +80,3 @@ case $where in
      exit 1
      ;;
 esac
-
-#
-# Issue a simple check to make sure that the user is allowed to execute
-# remote commands on the same machine.
-#
-
-machine=`uname -n`
-res=`${RSH} -n $machine echo Works < /dev/null 2>&1 | grep Works | head -1`
-if test "x$res" != "xWorks"; then
-  echo "You should make sure you are authorized to use the ${RSH} command" >&2
-  echo "You may want to check the ${RSH} manual by typing: man ${RSH}" >&2
-  echo 'Look for the section concerning ".rhosts" files' >&2
-  exit 1
-fi
